# gamekeeper

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
gamekeeper/: __init__.py  analyze.py  capture.py  chat.py  cli.py  config.py  defense.py  discover.py  fingerprint.py  identify.py  labeler.py  llm.py  monitor.py  oui.py  report.py  sinkhole.py  store.py
gamekeeper/knowledge/: STRATEGY.md  blocklist.txt  threats.yaml
gamekeeper/web/: __init__.py  app.html  server.py
